[package]
name = "doors"
version = "0.8.0"
edition = "2021"
authors = ["Robert D. French <robert@robertdfrench.me>"]
description = "Access the illumos Doors API from Rust"
license = "MPL-2.0"
repository = "https://github.com/robertdfrench/rusty-doors"
documentation = "https://docs.rs/doors"

[dependencies]
libc = "0.2"
door-macros = { version = "~0.1", path = "../macros" }
