[package]
name = "door-macros"
version = "0.1.1"
edition = "2021"
authors = ["Robert D. French <robert@robertdfrench.me>"]
description = "Macros for the 'doors' crate"
license = "MPL-2.0"
repository = "https://github.com/robertdfrench/rusty-doors"
documentation = "https://docs.rs/doors"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "printing"] }
quote = "1.0"

[dev-dependencies]
doors = { version = "~0", path = "../doors" }
